--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ annotated-types==0.7.0
 anyio==4.4.0
 APScheduler==3.6.3
 asgiref==3.8.1
+attrs==24.2.0
 beautifulsoup4==4.12.3
 billiard==4.2.0
 blis==0.7.11
@@ -11,19 +12,25 @@ catalogue==2.0.10
 celery==5.4.0
 certifi==2024.8.30
 charset-normalizer==3.3.2
+chromedriver-binary==74.0.3729.6.0
 click==8.1.7
 click-didyoumean==0.3.1
 click-plugins==1.1.1
 click-repl==0.3.0
 cloudpathlib==0.19.0
 confection==0.1.5
+cron-descriptor==1.4.5
 cymem==2.0.8
 distro==1.9.0
 Django==5.1.1
 django-admin-sortable2==2.2.3
+django-celery-beat==2.7.0
 django-cors-headers==4.4.0
+django-extensions==3.2.3
 django-redis==5.4.0
+django-timezone-field==7.0
 djangorestframework==3.15.2
+dropbox==12.0.2
 es-core-news-sm @ https://github.com/explosion/spacy-models/releases/download/es_core_news_sm-3.7.0/es_core_news_sm-3.7.0-py3-none-any.whl#sha256=61e6e5530941f5880166855f09f60d7e6ba79ec1e8e45f96244bdb1eb169eb1d
 flower==2.0.1
 google-api-core==2.20.0
@@ -32,6 +39,7 @@ google-auth==2.35.0
 google-auth-httplib2==0.2.0
 google-auth-oauthlib==1.2.1
 googleapis-common-protos==1.65.0
+graphviz==0.20.3
 gunicorn==23.0.0
 h11==0.14.0
 httpcore==1.0.5
@@ -49,12 +57,16 @@ marisa-trie==1.2.0
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
+mega.py==1.0.8
 murmurhash==1.0.10
 nltk==3.9.1
 numpy==1.26.4
 oauthlib==3.2.2
 openai==1.43.0
+outcome==1.3.0.post0
 packaging==24.1
+pandas==2.2.3
+pathlib==1.0.1
 pdfminer3k==1.3.4
 ply==3.11
 preshed==3.0.9
@@ -64,25 +76,32 @@ proto-plus==1.24.0
 protobuf==5.28.2
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
+pycryptodome==3.21.0
 pydantic==2.8.2
 pydantic_core==2.20.1
 Pygments==2.18.0
 pyparsing==3.1.4
+PySocks==1.7.1
+python-crontab==3.2.0
 python-dateutil==2.9.0.post0
 python-telegram-bot==21.5
 pytz==2024.1
 redis==5.0.8
 regex==2024.9.11
 requests==2.32.3
-requests-oauthlib==2.0.0
+requests-oauthlib==1.3.1
 rich==13.8.1
 rsa==4.9
+scikit-learn==1.5.2
+scipy==1.14.1
+selenium==4.26.1
 sentry-sdk==2.13.0
 setuptools==74.1.1
 shellingham==1.5.4
 six==1.16.0
 smart-open==7.0.4
 sniffio==1.3.1
+sortedcontainers==2.4.0
 soupsieve==2.6
 spacy==3.7.6
 spacy-legacy==3.0.12
@@ -90,20 +109,29 @@ spacy-loggers==1.0.5
 spacytextblob==4.0.0
 sqlparse==0.5.1
 srsly==2.4.8
+stone==3.3.1
 telegram==0.0.1
+tenacity==5.1.5
 textblob==0.15.3
 thinc==8.2.5
+threadpoolctl==3.5.0
 tornado==6.4.1
 tqdm==4.66.5
+trio==0.27.0
+trio-websocket==0.11.1
+tweepy==4.14.0
 typer==0.12.5
 typing_extensions==4.12.2
 tzdata==2024.1
 tzlocal==5.2
 uritemplate==4.1.1
 urllib3==2.2.2
+vaderSentiment==3.3.2
 vine==5.1.0
 wasabi==1.1.3
 wcwidth==0.2.13
 weasel==0.4.1
+websocket-client==1.8.0
 whitenoise==6.7.0
 wrapt==1.16.0
+wsproto==1.2.0
