Actualizar .gitignore para evitar eliminar venv y media

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
-# Archivos de sistema macOS
+# Ignorar el entorno virtual
+venv/
+*.pyc
+__pycache__/
 .DS_Store
+
+# Archivos estáticos generados
+staticfiles/
+media/
