--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,9 @@ __pycache__/
 # Archivos estáticos generados
 staticfiles/
 media/
+
+
+#omitir las bases de datos
+db.sqlite3
+db1.sqlite3
+db2.sqlite3
