--- a/requirements.txt
+++ b/requirements.txt
@@ -1,140 +1,225 @@
-admin_tools==0.1
-amqp==5.2.0
+absl-py==2.1.0
+aiofiles==23.2.1
+aiohappyeyeballs==2.4.4
+aiohttp==3.11.10
+aiosignal==1.3.1
+amqp==5.3.1
 annotated-types==0.7.0
-anyio==4.4.0
-APScheduler==3.6.3
+anyio==3.7.1
 asgiref==3.8.1
+astunparse==1.6.3
+asyncer==0.0.7
 attrs==24.2.0
+Automat==24.8.1
+backoff==2.2.1
 beautifulsoup4==4.12.3
-billiard==4.2.0
-blis==0.7.11
-cachetools==4.2.2
+bidict==0.23.1
+billiard==4.2.1
+blis==1.0.2
 catalogue==2.0.10
 celery==5.4.0
 certifi==2024.8.30
-charset-normalizer==3.3.2
-chromedriver-binary==74.0.3729.6.0
+cffi==1.17.1
+charset-normalizer==3.4.0
+chevron==0.14.0
 click==8.1.7
 click-didyoumean==0.3.1
 click-plugins==1.1.1
 click-repl==0.3.0
-cloudpathlib==0.19.0
+cloudpathlib==0.20.0
 confection==0.1.5
+constantly==23.10.4
+contourpy==1.3.1
 cron-descriptor==1.4.5
-cymem==2.0.8
+cryptography==44.0.0
+cssselect==1.2.0
+cycler==0.12.1
+cymem==2.0.10
+dataclasses-json==0.6.7
+defusedxml==0.7.1
+Deprecated==1.2.15
 distro==1.9.0
-Django==5.1.1
-django-admin-sortable2==2.2.3
+Django==5.1.4
 django-admin-tools==0.9.3
 django-celery-beat==2.7.0
-django-cors-headers==4.4.0
+django-cors-headers==4.6.0
+django-debug-toolbar==4.4.6
 django-extensions==3.2.3
+django-filter==24.3
 django-grappelli==4.0.1
+django-nested-admin==4.1.1
 django-redis==5.4.0
+django-requests==0.0.2
 django-timezone-field==7.0
 djangorestframework==3.15.2
-dropbox==12.0.2
-es-core-news-sm @ https://github.com/explosion/spacy-models/releases/download/es_core_news_sm-3.7.0/es_core_news_sm-3.7.0-py3-none-any.whl#sha256=61e6e5530941f5880166855f09f60d7e6ba79ec1e8e45f96244bdb1eb169eb1d
-flower==2.0.1
-google-api-core==2.20.0
-google-api-python-client==2.147.0
-google-auth==2.35.0
-google-auth-httplib2==0.2.0
-google-auth-oauthlib==1.2.1
-googleapis-common-protos==1.65.0
+djangorestframework-simplejwt==5.3.1
+drf-yasg==1.21.8
+es_core_news_sm @ https://github.com/explosion/spacy-models/releases/download/es_core_news_sm-3.8.0/es_core_news_sm-3.8.0-py3-none-any.whl#sha256=e451a83d6df79b87e9eed0cb553f03e99e36a3bab18a7b79f0dcfd1fdf875e12
+fastapi==0.115.6
+fastapi-socketio==0.0.10
+filelock==3.16.1
+filetype==1.2.0
+flatbuffers==24.3.25
+fonttools==4.55.3
+frozenlist==1.5.0
+gast==0.6.0
+geographiclib==2.0
+geopy==2.4.1
+google-pasta==0.2.0
+googleapis-common-protos==1.66.0
 graphviz==0.20.3
+grpcio==1.68.1
 gunicorn==23.0.0
 h11==0.14.0
-httpcore==1.0.5
-httplib2==0.22.0
-httpx==0.27.2
-humanize==4.10.0
-idna==3.8
+h5py==3.12.1
+httpcore==1.0.7
+httpx==0.28.1
+hyperlink==21.0.0
+idna==3.10
+importlib_metadata==8.5.0
+incremental==24.7.2
+inflection==0.5.1
+itemadapter==0.10.0
+itemloaders==1.3.2
+itsdangerous==2.2.0
 Jinja2==3.1.4
-jiter==0.5.0
+jiter==0.8.2
+jmespath==1.0.1
 joblib==1.4.2
-kombu==5.4.0
-langcodes==3.4.0
-language_data==1.2.0
-marisa-trie==1.2.0
+keras==3.7.0
+kiwisolver==1.4.7
+kombu==5.4.2
+langcodes==3.5.0
+language_data==1.3.0
+Lazify==0.4.0
+libclang==18.1.1
+literalai==0.0.623
+lxml==5.3.0
+marisa-trie==1.2.1
+Markdown==3.7
 markdown-it-py==3.0.0
-MarkupSafe==2.1.5
+MarkupSafe==3.0.2
+marshmallow==3.23.1
+matplotlib==3.9.3
 mdurl==0.1.2
-mega.py==1.0.8
-murmurhash==1.0.10
+ml-dtypes==0.4.1
+multidict==6.1.0
+murmurhash==1.0.11
+mypy-extensions==1.0.0
+namex==0.0.8
+nest-asyncio==1.6.0
 nltk==3.9.1
-numpy==1.26.4
+numpy==2.2.0
 oauthlib==3.2.2
-openai==1.43.0
+openai==1.57.2
+opentelemetry-api==1.28.2
+opentelemetry-exporter-otlp==1.28.2
+opentelemetry-exporter-otlp-proto-common==1.28.2
+opentelemetry-exporter-otlp-proto-grpc==1.28.2
+opentelemetry-exporter-otlp-proto-http==1.28.2
+opentelemetry-instrumentation==0.49b2
+opentelemetry-proto==1.28.2
+opentelemetry-sdk==1.28.2
+opentelemetry-semantic-conventions==0.49b2
+opt_einsum==3.4.0
+optree==0.13.1
 outcome==1.3.0.post0
-packaging==24.1
+packaging==23.1
 pandas==2.2.3
+parsel==1.9.1
 pathlib==1.0.1
-pdfminer3k==1.3.4
+pillow==11.0.0
 ply==3.11
 preshed==3.0.9
-prometheus_client==0.20.0
-prompt_toolkit==3.0.47
-proto-plus==1.24.0
-protobuf==5.28.2
+prompt_toolkit==3.0.48
+propcache==0.2.1
+Protego==0.3.1
+protobuf==5.29.1
+psycopg2-binary==2.9.10
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
+pycparser==2.22
+pycrypto==2.6.1
 pycryptodome==3.21.0
-pydantic==2.8.2
-pydantic_core==2.20.1
+pydantic==2.10.3
+pydantic_core==2.27.1
+PyDispatcher==2.0.7
 Pygments==2.18.0
-pyparsing==3.1.4
+PyJWT==2.10.1
+pyOpenSSL==24.3.0
+pyparsing==3.2.0
 PySocks==1.7.1
 python-crontab==3.2.0
 python-dateutil==2.9.0.post0
-python-telegram-bot==21.5
-pytz==2024.1
-redis==5.0.8
-regex==2024.9.11
+python-dotenv==1.0.1
+python-engineio==4.10.1
+python-keyczar==0.716
+python-monkey-business==1.1.0
+python-multipart==0.0.9
+python-socketio==5.11.4
+pytz==2024.2
+PyYAML==6.0.2
+queuelib==1.7.0
+redis==5.2.1
+regex==2024.11.6
 requests==2.32.3
+requests-file==2.1.0
 requests-oauthlib==1.3.1
-rich==13.8.1
-rsa==4.9
-scikit-learn==1.5.2
+rich==13.9.4
+scikit-learn==1.6.0
 scipy==1.14.1
-selenium==4.26.1
-sentry-sdk==2.13.0
-setuptools==74.1.1
+Scrapy==2.12.0
+selenium==4.27.1
+sentry-sdk==2.19.2
+service-identity==24.2.0
+setuptools==75.6.0
 shellingham==1.5.4
-six==1.16.0
-smart-open==7.0.4
+simple-websocket==1.1.0
+six==1.17.0
+smart-open==7.0.5
 sniffio==1.3.1
 sortedcontainers==2.4.0
 soupsieve==2.6
-spacy==3.7.6
+spacy==3.8.3
 spacy-legacy==3.0.12
 spacy-loggers==1.0.5
-spacytextblob==4.0.0
-sqlparse==0.5.1
-srsly==2.4.8
+sqlparse==0.5.3
+srsly==2.5.0
+starlette==0.41.3
 stone==3.3.1
-telegram==0.0.1
-tenacity==5.1.5
-textblob==0.15.3
-thinc==8.2.5
+syncer==2.0.3
+tenacity==9.0.0
+tensorboard==2.18.0
+tensorboard-data-server==0.7.2
+tensorflow==2.18.0
+termcolor==2.5.0
+thinc==8.3.2
 threadpoolctl==3.5.0
-tornado==6.4.1
-tqdm==4.66.5
+tldextract==5.1.3
+tomli==2.2.1
+tqdm==4.67.1
 trio==0.27.0
 trio-websocket==0.11.1
-tweepy==4.14.0
-typer==0.12.5
+Twisted==24.11.0
+typer==0.15.1
+typing-inspect==0.9.0
 typing_extensions==4.12.2
-tzdata==2024.1
-tzlocal==5.2
+tzdata==2024.2
+uptrace==1.28.2
 uritemplate==4.1.1
-urllib3==2.2.2
-vaderSentiment==3.3.2
+urllib3==2.2.3
+uvicorn==0.25.0
 vine==5.1.0
+w3lib==2.2.1
 wasabi==1.1.3
+watchfiles==0.20.0
 wcwidth==0.2.13
 weasel==0.4.1
 websocket-client==1.8.0
-whitenoise==6.7.0
-wrapt==1.16.0
+Werkzeug==3.1.3
+wheel==0.45.1
+wrapt==1.17.0
 wsproto==1.2.0
+yarl==1.18.3
+zipp==3.21.0
+zope.interface==7.2
