--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
-DJANGO_SETTINGS_MODULE = chatbot_django.settings
+DJANGO_SETTINGS_MODULE = ai_huntred.settings
 python_files = tests.py test_*.py *_tests.py
 
 asyncio_default_fixture_loop_scope = function
